--- a/_posts/2018-09-03-最新React ref详解（v16.4.2）.md
+++ b/_posts/2018-09-03-最新React ref详解（v16.4.2）.md
@@ -80,10 +80,11 @@ function commitAttachRef(finishedWork: Fiber) {
 }
 ```
 
-从方法名我们大概可以知道这个方法是用来在commit阶段挂载ref的，可以提取两点重要信息
+从方法名我们大概可以知道这个方法是用来在commit阶段挂载ref的，可以提取两点重要信息：
 
 1. ref对应的instance是finishedWork这个fiberNode的stateNode属性。具体的内容我们待会儿再看。
 2. ref本身支持两种写法，一种是通过React.createRef()方法生成ref对象
+
 ```js
 export function createRef(): RefObject {
   const refObject = {
@@ -96,6 +97,7 @@ export function createRef(): RefObject {
 }
 
 ```
+
 这种情况下会直接将instance挂载到ref上。
 
 另一种是通过回调方法的方式，这种情况下会将instance作为参数传递到回调中并执行。第二种方法是在React之前版本获取ref比较通用的做法。
@@ -103,6 +105,7 @@ export function createRef(): RefObject {
 好了，现在让我们回到第一点。这个instance到底是什么？
 
 我们注意到对于tag属性的不同值，获取instance的行为并不同。那么fiberNode的tag属性到底是啥呢
+
 ```js
 export type Fiber = {|
   // These first fields are conceptually members of an Instance. This used to
