--- a/_posts/2018-09-03-最新React ref详解（v16.4.2）.md
+++ b/_posts/2018-09-03-最新React ref详解（v16.4.2）.md
@@ -83,7 +83,7 @@ function commitAttachRef(finishedWork: Fiber) {
 从方法名我们大概可以知道这个方法是用来在commit阶段挂载ref的，可以提取两点重要信息：
 
 1. ref对应的instance是finishedWork这个fiberNode的stateNode属性。具体的内容我们待会儿再看。
-2. ref本身支持两种写法，一种是通过React.createRef()方法生成ref对象
+2. ref本身支持两种写法，一种是通过React.createRef()方法生成ref对象。
 
 ```js
 export function createRef(): RefObject {
